[gd_scene load_steps=2 format=3 uid="uid://c5stainedglass001"]

[ext_resource type="Script" uid="uid://stainedglass001" path="res://src/minigames/stained_glass.gd" id="1_stained"]

[node name="StainedGlass" type="Node2D"]
script = ExtResource("1_stained")
snap_distance = 30.0
frame_size = Vector2(300, 400)
frame_position = Vector2(50, 50)
scatter_area = Rect2(400, 50, 300, 400)

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 500.0
color = Color(0.12, 0.12, 0.15, 1)

[node name="FrameContainer" type="Node2D" parent="."]

[node name="FrameBorder" type="ColorRect" parent="FrameContainer"]
offset_left = 42.0
offset_top = 42.0
offset_right = 358.0
offset_bottom = 458.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="FrameInner" type="ColorRect" parent="FrameContainer"]
offset_left = 50.0
offset_top = 50.0
offset_right = 350.0
offset_bottom = 450.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="TargetsContainer" type="Node2D" parent="."]

[node name="FragmentsContainer" type="Node2D" parent="."]

[node name="DebugUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 500.0

[node name="DebugPanel" type="Panel" parent="DebugUI"]
layout_mode = 0
offset_left = 400.0
offset_top = 460.0
offset_right = 790.0
offset_bottom = 495.0

[node name="PiecesLabel" type="Label" parent="DebugUI"]
layout_mode = 0
offset_left = 10.0
offset_top = 465.0
offset_right = 150.0
offset_bottom = 490.0
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Pieces: 0 / 0"

[node name="ShowTargetsBtn" type="Button" parent="DebugUI"]
layout_mode = 0
offset_left = 410.0
offset_top = 465.0
offset_right = 510.0
offset_bottom = 490.0
text = "Show Targets"

[node name="AutoSolveBtn" type="Button" parent="DebugUI"]
layout_mode = 0
offset_left = 520.0
offset_top = 465.0
offset_right = 610.0
offset_bottom = 490.0
text = "Auto-solve"

[node name="ResetBtn" type="Button" parent="DebugUI"]
layout_mode = 0
offset_left = 620.0
offset_top = 465.0
offset_right = 690.0
offset_bottom = 490.0
text = "Reset"

[node name="WinLabel" type="Label" parent="."]
visible = false
offset_left = 100.0
offset_top = 200.0
offset_right = 300.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(0.2, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "Puzzle Complete!"
horizontal_alignment = 1
